--- a/views/pages/admin/settings.pug
+++ b/views/pages/admin/settings.pug
@@ -1,6 +1,9 @@
 extends ./_layout.pug
 
 block adminContent
-	section.section
-		.container
-			label.label Coming soon
+	.hero
+		h1.title#title Site Settings
+		h2.subtitle Manage site configuration
+	.form-sections
+		section
+			| Coming soon
