--- a/views/pages/create.pug
+++ b/views/pages/create.pug
@@ -6,13 +6,11 @@ block rootNavCenter
 block rootNavRight
 	i.nav-item#notifload
 	span.nav-item
-		a.button.is-warning.btn-create-discard
-			span.icon
-				i.fa.fa-times
+		a.button.is-outlined.btn-create-discard
+			i.icon-cross
 			span Discard
-		a.button.is-success.btn-create-save
-			span.icon
-				i.fa.fa-check
+		a.button.btn-create-save
+			i.icon-check
 			span Save Document
 
 block content
