--- a/views/pages/admin/profile.pug
+++ b/views/pages/admin/profile.pug
@@ -1,28 +1,35 @@
 extends ./_layout.pug
 
 block adminContent
-	section.section
-		.container
-			.columns
-				.column.is-two-thirds
+	.hero
+		h1.title#title My Profile
+		h2.subtitle Profile and authentication info
+	.form-sections
+		.columns.is-gapless
+			.column.is-two-thirds
+				section
 					label.label Email
-					p.control.has-icon.has-icon-right
-						input.input(type='email', placeholder='Email', value=user.email, disabled=(user.provider !== 'local'))
-						i.fa.fa-envelope
-					if user.provider == 'local'
+					p.control.is-fullwidth
+						input.input(type='text', placeholder='Email', value=user.email, disabled=(user.provider !== 'local'))
+				if user.provider == 'local'
+					section
 						label.label Password
-						p.control.has-icon.has-icon-right
+						p.control.is-fullwidth
 							input.input(type='password', placeholder='Password', value='********')
-							i.fa.fa-lock
+					section
 						label.label Verify Password
-						p.control.has-icon.has-icon-right
+						p.control.is-fullwidth
 							input.input(type='password', placeholder='Password', value='********')
-							i.fa.fa-lock
+				section
 					label.label Display Name
-					p.control.has-icon.has-icon-right
+					p.control.is-fullwidth
 						input.input(type='text', placeholder='John Smith', value=user.name)
-						i.fa.fa-user
-				.column
+				section
+					button.button.is-green
+						i.icon-check
+						span Save Changes
+			.column
+				.panel
 					label.label Provider
 					p.control.account-profile-provider
 						case user.provider
@@ -36,8 +43,3 @@ block adminContent
 					p.control= userMoment(user.createdAt).format('LL')
 					label.label Last Profile Update
 					p.control= userMoment(user.updatedAt).format('LL')
-	section.section
-		.container
-			p.control
-				button.button.is-success
-					| Save Changes
