--- a/views/modals/editor-image.pug
+++ b/views/modals/editor-image.pug
@@ -29,7 +29,7 @@
 							li(v-for="fld in folders")
 								a(v-on:click="selectFolder(fld)", v-bind:class="{ 'is-active': currentFolder === fld }")
 									i.icon-folder2
-									span /{{ fld }}
+									span / {{ fld }}
 						.model-sidebar-header Alignment
 						.model-sidebar-content
 							p.control.is-fullwidth
@@ -43,7 +43,9 @@
 							img(v-bind:src="'/uploads/t/' + img._id + '.png'")
 							span: strong {{ img.basename }}
 							span {{ img.filesize | filesize }}
-						em(v-show="images.length < 1") This folder is empty.
+						em(v-show="images.length < 1")
+							i.icon-marquee-minus
+							| This folder is empty.
 			footer
 				a.button.is-grey.is-outlined(v-on:click="cancel") Discard
 				a.button.is-green(v-on:click="insertImage") Insert Image
