Markdown display fixes + error pages

--- a/views/common/footer.pug
+++ b/views/common/footer.pug
@@ -1,7 +1,7 @@
 footer.footer
 	span
 		= t('footer.poweredby') + ' '
-		a(href='https://github.com/Requarks/wiki') Requarks Wiki
+		a(href='https://github.com/Requarks/wiki') Wiki.js
 		| .
 	ul
 		li: a(href='/')= t('footer.home')
