--- a/views/error-forbidden.pug
+++ b/views/error-forbidden.pug
@@ -19,13 +19,11 @@ html
 
 		// CSS
 		link(type='text/css', rel='stylesheet', href='/css/libs.css')
-		link(type='text/css', rel='stylesheet', href='/css/app.css')
+		link(type='text/css', rel='stylesheet', href='/css/error.css')
 
-	body(class='server-error')
-		section.hero.is-danger.is-fullheight
-			.hero-body
-				.container
-					a(href='/'): img(src='/favicons/android-icon-96x96.png')
-					h1.title(style={ 'margin-top': '30px'}) Forbidden
-					h2.subtitle(style={ 'margin-bottom': '50px'}) Sorry, you don't have the necessary permissions to access this page.
-					a.button.is-dark.is-inverted(href='/') Go Home
+	body(class='is-forbidden')
+		.container
+			a(href='/'): img(src='/favicons/android-icon-96x96.png')
+			h1.title(style={ 'margin-top': '30px'}) Forbidden
+			h2.subtitle(style={ 'margin-bottom': '50px'}) Sorry, you don't have the necessary permissions to access this page.
+			a.button.is-amber.is-inverted(href='/') Go Home
