--- a/views/error-notexist.pug
+++ b/views/error-notexist.pug
@@ -19,14 +19,12 @@ html
 
 		// CSS
 		link(type='text/css', rel='stylesheet', href='/css/libs.css')
-		link(type='text/css', rel='stylesheet', href='/css/app.css')
+		link(type='text/css', rel='stylesheet', href='/css/error.css')
 
-	body(class='server-error')
-		section.hero.is-dark.is-fullheight
-			.hero-body
-				.container
-					a(href='/'): img(src='/favicons/android-icon-96x96.png')
-					h1.title(style={ 'margin-top': '30px'})= message
-					h2.subtitle(style={ 'margin-bottom': '50px'}) Would you like to create this entry?
-					a.button.is-dark.is-inverted(href='/create/' + newpath, style={'margin-right': '5px'}) Create
-					a.button.is-dark.is-inverted(href='/') Go Home
+	body(class='is-notexist')
+		.container
+			a(href='/'): img(src='/favicons/android-icon-96x96.png')
+			h1= message
+			h2 Would you like to create this entry?
+			a.button.is-amber.is-inverted(href='/create/' + newpath) Create
+			a.button.is-amber.is-inverted(href='/') Go Home
