Headers section styling

--- a/views/error-forbidden.pug
+++ b/views/error-forbidden.pug
@@ -24,6 +24,6 @@ html
 	body(class='is-forbidden')
 		.container
 			a(href='/'): img(src='/favicons/android-icon-96x96.png')
-			h1.title(style={ 'margin-top': '30px'}) Forbidden
-			h2.subtitle(style={ 'margin-bottom': '50px'}) Sorry, you don't have the necessary permissions to access this page.
+			h1 Forbidden
+			h2 Sorry, you don't have the necessary permissions to access this page.
 			a.button.is-amber.is-inverted(href='/') Go Home
