--- a/views/error-notexist.pug
+++ b/views/error-notexist.pug
@@ -26,5 +26,5 @@ html
 			a(href='/'): img(src='/favicons/android-icon-96x96.png')
 			h1= message
 			h2 Would you like to create this entry?
-			a.button.is-amber.is-inverted(href='/create/' + newpath) Create
+			a.button.is-amber.is-inverted.is-featured(href='/create/' + newpath) Create
 			a.button.is-amber.is-inverted(href='/') Go Home
