--- a/views/pages/create.pug
+++ b/views/pages/create.pug
@@ -22,4 +22,6 @@ block content
 	include ../modals/create-discard.pug
 	include ../modals/editor-link.pug
 	include ../modals/editor-image.pug
+	include ../modals/editor-file.pug
+	include ../modals/editor-video.pug
 	include ../modals/editor-codeblock.pug
