--- a/views/pages/edit.pug
+++ b/views/pages/edit.pug
@@ -23,4 +23,5 @@ block content
 	include ../modals/editor-link.pug
 	include ../modals/editor-image.pug
 	include ../modals/editor-file.pug
+	include ../modals/editor-video.pug
 	include ../modals/editor-codeblock.pug
