--- a/views/pages/view.pug
+++ b/views/pages/view.pug
@@ -11,18 +11,20 @@ mixin tocMenu(ti)
 block rootNavRight
 	i.nav-item#notifload
 	.nav-item
-		a.button.is-outlined.btn-move-prompt.is-hidden
-			i.icon-shuffle
-			span Move
+		if rights.write
+			a.button.is-outlined.btn-move-prompt.is-hidden
+				i.icon-shuffle
+				span Move
 		a.button.is-outlined(href='/source/' + pageData.meta.path)
 			i.icon-loader
 			span Source
-		a.button(href='/edit/' + pageData.meta.path)
-			i.icon-document-text
-			span Edit
-		a.button.btn-create-prompt
-			i.icon-plus
-			span Create
+		if rights.write
+			a.button(href='/edit/' + pageData.meta.path)
+				i.icon-document-text
+				span Edit
+			a.button.btn-create-prompt
+				i.icon-plus
+				span Create
 
 block content
 
@@ -46,10 +48,11 @@ block content
 									a(href='/' + pageData.parent.path)
 										i.icon-reply
 										span= pageData.parent.title
-							li
-								a(href='/admin')
-									i.icon-head
-									span Account
+							if !isGuest
+								li
+									a(href='/admin')
+										i.icon-head
+										span Account
 					aside.stickyscroll(data-margin-top=40)
 						.sidebar-label
 							i.icon-th-list
