Users list + Edit user interface

--- a/views/pages/admin/_layout.pug
+++ b/views/pages/admin/_layout.pug
@@ -7,7 +7,7 @@ block rootNavRight
 	i.nav-item#notifload
 	.nav-item
 		a.button.btn-edit-discard(href='/')
-			i.fa.fa-home
+			i.icon-home
 			span Home
 
 block content
