--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -14,6 +14,7 @@ $primary: 'indigo';
 @import 'core-client/scss/components/panel';
 @import 'core-client/scss/components/search';
 @import 'core-client/scss/components/sidebar';
+@import 'core-client/scss/components/table';
 @import 'core-client/scss/components/typography';
 
 @import './libs/twemoji-awesome';
