--- a/views/pages/admin/users.pug
+++ b/views/pages/admin/users.pug
@@ -8,7 +8,7 @@ block rootNavRight
 			span Create / Authorize User
 
 block adminContent
-	#page-type-admin
+	#page-type-admin-users
 		.hero
 			h1.title#title Users
 			h2.subtitle Manage users and access rights
