Added appdata support

--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -63,5 +63,5 @@ html
 		#copyright
 			= t('footer.poweredby') + ' '
 			a.icon(href='https://github.com/Requarks/wiki')
-				i.fa.fa-github
+				i.icon-github
 			a(href='https://github.com/Requarks/wiki') Requarks Wiki
