--- a/views/pages/view.pug
+++ b/views/pages/view.pug
@@ -53,6 +53,11 @@ block content
 									a(href='/admin')
 										i.icon-head
 										span Account
+							else
+								li
+									a(href='/login')
+										i.icon-unlock
+										span Login
 					aside.stickyscroll(data-margin-top=40)
 						.sidebar-label
 							i.icon-th-list
